@@ -7,6 +7,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -23,12 +24,18 @@ public class StpInterfaceImpl implements StpInterface {
     public List<String> getRoleList(Object loginId, String loginType) {
         String role = redisTemplate.opsForValue().get(loginId+"_role");
         if (role != null) {
-            return List.of(role);
+            return Arrays.asList(role.split(","));
         }
         Admin admin = adminService.getById(Long.parseLong(loginId.toString()));
         if (admin != null) {
-            redisTemplate.opsForValue().set(loginId+"_role", "admin");
-            return List.of("admin");
+            if (admin.getPower() == 1) {
+                String roles =  String.join(",",Arrays.asList("superAdmin", "admin"));
+                redisTemplate.opsForValue().set(loginId+"_role", roles);
+                return List.of("superAdmin","admin");
+            } else {
+                redisTemplate.opsForValue().set(loginId+"_role", "admin");
+                return List.of("admin");
+            }
         }
         // 否则为住户
         redisTemplate.opsForValue().set(loginId+"_role", "user");
